--- a/Gym_Studio/root/css/style.css
+++ b/Gym_Studio/root/css/style.css
@@ -174,6 +174,26 @@ h1 {
 
 
 /*=================================
+        REGISTER TRAINER
+===================================*/
+input[type=text] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+}
+
+#register-table {
+    width: 50%;
+    padding: 15px;
+}
+
+#trainers-form {
+    padding-left: 50px;
+}
+
+
+/*=================================
             FOOTER
 ===================================*/
 
