--- a/Gym_Studio/root/css/style.css
+++ b/Gym_Studio/root/css/style.css
@@ -39,71 +39,49 @@ h1 {
             NAVBAR
 ===================================*/
 
-#navbar {
-    background-color: #DFF8EB;
-    display: grid;
-    min-height: 100px;
-    grid-auto-flow: column;
-    grid-gap: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
-}
-
-#logo {
-    display: grid;
-    justify-content: start;
-    align-content: center;
-    font-size: 25px;
-}
-
-#links {
-    display: grid;
-    justify-content: end;
-    align-content: center;
-    grid-auto-flow: column;
-    grid-gap: 20px;
-    font-size: 20px;
-}
-
-.nav-container {
-    background-color: #DFF8EB;
-    min-height: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
-}
-
-.nav-checkbox {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+nav {
+    display: flex;
+    justify-content: space-around;
     align-items: center;
-    padding: 10px 0;
+    min-height: 8vh;
+    background-color: #DFF8EB;
 }
 
-.tab-nav {
-    outline: none;
-    display: none;
+.logo {
+    color: #011638;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    font-size: 23px;
 }
 
-.tab-nav-label {
-    display: none;
+.nav-links {
+    display: flex;
+    justify-content: space-around;
+    width: 35%;
 }
 
-.tab-content {
-    grid-column: 3;
+.nav-links li {
     list-style: none;
-    margin: 0;
-    padding: 0;
 }
 
-.tab-content li {
-    display: inline-block;
-    padding-right: 10px;
-    position: relative;
+.nav-links a {
+    font-size: 15px;
 }
 
-.tab-content li a {
-    font-size: 20px;
-    position: relative;
+.burger {
+    display: none;
+    cursor: pointer;
+}
+
+.burger div {
+    width: 25px;
+    height: 3px;
+    background-color: #011638;
+    margin: 5px;
+}
+
+.nav-active {
+    transform: translateX(0%);
 }
 
 
@@ -214,6 +192,28 @@ input[type=text] {
 #trainers-table {
     text-align: left;
 }
+
+
+/*=================================
+            LOGIN
+===================================*/
+
+#login-table {
+    width: 50%;
+    padding: 15px;
+}
+
+#login-form {
+    padding-left: 50px;
+}
+
+input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+}
+
 
 
 /*=================================
